add_executable(ga_integer_sum integer_sum.cpp)
target_link_libraries(ga_integer_sum PRIVATE evo_alg)
target_compile_features(ga_integer_sum PRIVATE cxx_std_17)
target_compile_options(ga_integer_sum PRIVATE ${CXX_FLAGS})
set_target_properties(ga_integer_sum PROPERTIES OUTPUT_NAME integer_sum)

add_executable(ga_sphere sphere.cpp)
target_link_libraries(ga_sphere PRIVATE evo_alg)
target_compile_features(ga_sphere PRIVATE cxx_std_17)
target_compile_options(ga_sphere PRIVATE ${CXX_FLAGS})
set_target_properties(ga_sphere PROPERTIES OUTPUT_NAME sphere)

add_executable(ga_ackley ackley.cpp)
target_link_libraries(ga_ackley PRIVATE evo_alg)
target_compile_features(ga_ackley PRIVATE cxx_std_17)
target_compile_options(ga_ackley PRIVATE ${CXX_FLAGS})
set_target_properties(ga_ackley PROPERTIES OUTPUT_NAME ackley)

add_executable(ga_step step.cpp)
target_link_libraries(ga_step PRIVATE evo_alg)
target_compile_features(ga_step PRIVATE cxx_std_17)
target_compile_options(ga_step PRIVATE ${CXX_FLAGS})
set_target_properties(ga_step PROPERTIES OUTPUT_NAME step)

add_executable(ga_gp1 gp1.cpp)
target_link_libraries(ga_gp1 PRIVATE evo_alg)
target_compile_features(ga_gp1 PRIVATE cxx_std_17)
target_compile_options(ga_gp1 PRIVATE ${CXX_FLAGS})
set_target_properties(ga_gp1 PROPERTIES OUTPUT_NAME gp1)

add_executable(ga_schaffer schaffer.cpp)
target_link_libraries(ga_schaffer PRIVATE evo_alg)
target_compile_features(ga_schaffer PRIVATE cxx_std_17)
target_compile_options(ga_schaffer PRIVATE ${CXX_FLAGS})
set_target_properties(ga_schaffer PROPERTIES OUTPUT_NAME schaffer)

add_executable(ga_rosenbrock rosenbrock.cpp)
target_link_libraries(ga_rosenbrock PRIVATE evo_alg)
target_compile_features(ga_rosenbrock PRIVATE cxx_std_17)
target_compile_options(ga_rosenbrock PRIVATE ${CXX_FLAGS})
set_target_properties(ga_rosenbrock PROPERTIES OUTPUT_NAME rosenbrock)

add_executable(ga_schwefel schwefel.cpp)
target_link_libraries(ga_schwefel PRIVATE evo_alg)
target_compile_features(ga_schwefel PRIVATE cxx_std_17)
target_compile_options(ga_schwefel PRIVATE ${CXX_FLAGS})
set_target_properties(ga_schwefel PROPERTIES OUTPUT_NAME schwefel)